--- a/style.css
+++ b/style.css
@@ -73,8 +73,9 @@ body {
     right: 20px;
     padding: 40px;
     border-radius: 10px;
-    width: 300px;
+    width: calc(100% - 40px);
     background-color: #1a1a1a;
+    z-index: 1000;
   }
 }
 .header .container .nav .nav-links {
@@ -185,8 +186,7 @@ body {
     width: 75%;
   }
 }
-.main .content .btn-download,
-.main .content .btn-download:visited {
+.main .content .btn {
   font-size: 24px;
   text-decoration: none;
   color: #1E1E1E;
@@ -199,12 +199,10 @@ body {
   width: 100%;
   font-weight: 700;
 }
-.main .content .btn-download:hover,
-.main .content .btn-download:visited:hover {
+.main .content .btn:hover {
   background-color: #7c3aed;
 }
-.main .content .btn-download img,
-.main .content .btn-download:visited img {
+.main .content .btn img {
   width: 22px;
   height: 22px;
   vertical-align: middle;
@@ -216,12 +214,16 @@ body {
 }
 .main .card-display img {
   width: 522px;
-  height: 682px;
+  height: auto;
 }
 @media (max-width: 768px) {
   .main .card-display img {
     margin-top: 70px;
     width: 100%;
-    height: auto;
+  }
+}
+@media (max-width: 480px) {
+  .main .card-display img {
+    margin: 0 auto;
   }
 }
